  . Added access.suppress_path pool option to filter access log entries.
    (Mark Gallagher)
  . Fixed on fpm scoreboard occasional warning on acquisition failure.
    (Felix Wiedemann)

- Opcache:
  . Added initial support for JIT performance profiling generation
    for macOs Instrument. (David Carlier)
  . Fixed bug GH-8030 (Segfault with JIT and large match/switch statements).
    (Arnaud)
  . JIT support improvement for macOs for segments and executable permission
    bit handling. (David Carlier)

- PCRE:
  . Updated bundled libpcre to 10.40. (cmb)

- PDO_Firebird:
  . Fixed bug GH-8576 (Bad interpretation of length when char is UTF-8). (cmb)

- Random:
  . Added new random extension. (Go Kudo)

- SPL:
  . Widen iterator_to_array() and iterator_count()'s $iterator parameter to
    iterable. (timwolla)

- Standard:
  . Fixed empty array returned by str_split on empty input. (Michael Vorisek)
  . Added ini_parse_quantity function to convert ini quantities shorthand
    notation to int. (Dennis Snell)
  . Enable arc4random_buf for Linux glibc 2.36 and onwards
    for the random_bytes. (Cristian Rodriguez)
  . Uses CCRandomGenerateBytes instead of arc4random_buf on macOs. (David Carlier).

- Windows:
  . Added preliminary support for (cross-)building for ARM64. (Yun Dou)

07 Jul 2022, PHP 8.2.0alpha3

- Core:
  . Uses safe_perealloc instead of perealloc for the
    ZEND_PTR_STACK_RESIZE_IF_NEEDED to avoid possible overflows. (David Carlier)

- DBA:
  . Fixed LMDB driver hanging when attempting to delete a non-existing key
    (Girgias)

- Intl:
  . Fixed build for ICU 69.x and onwards. (David Carlier)

- Opcache:
  . Allocate JIT buffer close to PHP .text segemnt to allow using direct
    IP-relative calls and jumps.
    (Su Tao, Wang Xue, Chen Hu, Lizhen Lizhen, Dmitry)

- Sockets:
  . Added TCP_CONGESTION socket option. (David Carlier)
  . Added SO_ZEROCOPY/MSG_ZEROCOPY options. (David Carlier)

- SPL: