@@ -39,8 +39,9 @@ PHP                                                                        NEWS
     for macOs Instrument. (David Carlier)
   . Fixed bug GH-8030 (Segfault with JIT and large match/switch statements).
     (Arnaud)
-  . JIT support improvement for macOs for segments and executable permission
+  . Added JIT support improvement for macOs for segments and executable permission
     bit handling. (David Carlier)
+  . Added JIT buffer allocation near the .text section on FreeNSD. (David Carlier)
 
 - PCRE:
   . Updated bundled libpcre to 10.40. (cmb)
